(lang dune 3.0)
(name matchx)
(version 0.1.0)
(authors "Samuel Mimram <samuel.mimram@polytechnique.edu>")
(source (github smimram/matchx))
(bug_reports https://github.com/smimram/matchx/issues)
(generate_opam_files)

(package
 (name matchx)
 (synopsis "Stable maching for X students")
 (depends csv re)
)
